# University-Assignments

2-Year/LI3/proj-c/: Sem nome
2-Year/LI3/proj-c/include/: common.h  interface.h  list.h  loading.h  mydate.h  myheap.h  mypost.h  mytags.h  myuser.h  user.h
2-Year/LI3/proj-c/src/: Makefile  interface.c  loading.c  main.c  mydate.c  myheap.c  mypost.c  mytags.c  myuser.c
2-Year/LI3/proj-c/src/lib/: common.c  date.c  list.c
2-Year/LI3/proj-c/testes/: teste.c
2-Year/LI3/proj-java/relatorio/: relatorio.tex
2-Year/LI3/proj-java/src/main/java/engine/: ListPost.java  MyPost.java  MyPostHandler.java  MyTagHandler.java  MyUser.java  MyUserHandler.java  TCDCommunity.java  Testes.java  compAnswer.java  compScore.java  compTime.java
2-Year/LI3/proj-java/src/main/java/li3/: Controller.java  MVC.java  Main.java  View.java
2-Year/LI3/proj-java/tex/: relatorio.tex
2-Year/POO/: README.md
2-Year/POO/projeto/: AdminAprov.java  BDContribuintes.java  BDFaturas.java  BDSetores.java  BDgeral.java  CIndividual.java  CompFatTime.java  CompValor.java  Contribuinte.java  EmpInterior.java  Empresa.java  ErroComum.java  ErroContains.java  ErroNotFound.java  Erros.java  FamiliaNum.java  Fatura.java  FaturaVal.java  JavaFatura.java  Setor.java  Teste  basedados  main.java
2-Year/SO/headers/: parser.h  process.h
2-Year/SO/src/: Makefile  Sem nome  aux1.nb  ex1.nb  ex2.nb  exemplo.txt  main.c  notebook  parser.c  process.c  program  script.sh  teste  teste.nb  text.txt
3-Year/CC/: README.md
3-Year/CC/TP2/: BD_LOCAL.txt  Teste.java
3-Year/CC/TP2/DatagramTransport/: Buffer.java  Encriptar.java  ReceiverAgentUDP.java  SenderAgentUDP.java
3-Year/CC/TP2/TransferControl/: FileManager.java  Packet.java  RTT.java  Transfer.java  TransferCC.java  Upload.java  WindowManager.java
3-Year/CC/TP2/UserInterface/: BufferString.java  IO.java  Menu.java
3-Year/CC/TP3/: cc-dns-PL49.tgz
3-Year/CC/TP3/primario/: db.1-1-10.rev  db.2-2-10.rev  db.3-3-10.rev  db.4-4-10.rev  db.cc.pt  named.conf
3-Year/CC/TP3/secundario/: named.conf.options
3-Year/CG/: CMakeLists.txt  README.md
3-Year/CG/files/: anel.3ds  box.3ds  box1.3d  cam.xml  cone1.3d  cylinder.3d  nave.xml  plane.3d  planetario.xml  shrek.3d  sphere.3d  tea.3d  tea.3ds  teste.xml  torus1.3d  triangulo1.3d  triangulo2.3d  try.3d
3-Year/CG/headers/: Ambient.h  Camera.h  Diffuse.h  Emissive.h  Figure.h  Light.h  Material.h  Patch.h  Point.h  Polygon.h  Rotate.h  Scale.h  Specular.h  Transformation.h  Translate.h  parser.h
3-Year/CG/src/: Camera.cpp  Figure.cpp  Light.cpp  Patch.cpp  Point.cpp  Polygon.cpp  Rotate.cpp  Scale.cpp  Transformation.cpp  Translate.cpp  engine.cpp  generator.cpp  parser.cpp
3-Year/CG/src/Materials/: Ambient.cpp  Diffuse.cpp  Emissive.cpp  Material.cpp  Specular.cpp
3-Year/DSS/tex/: CAP1-M_Dominio.tex  CAP10-D_s_implementacao.tex  CAP11-opcionais.tex  CAP12-Implementacao.tex  CAP13-Interface.tex  CAP14-A_critica.tex  CAP2-D_Use_Case.tex  CAP3-E_Use_Case.tex  CAP4-Prototipo.tex  CAP5-D_maquina_estado.tex  CAP6-D_s_sistema.tex  CAP7-D_s_subsistema.tex  CAP8-D_packages.tex  CAP9-D_classes.tex  Capa.tex  Introducao.tex  main.tex
3-Year/LI4/: README.md
3-Year/SD/: README.md
4-Year/AA/: INFO.txt  Makefile  compileCPU.sh  compileGPU.sh  compilePAPI.sh  papi_usefull_counter.txt  roofline.sh  run.sh
4-Year/AA/include/: matrix.h  matrixgpu.cuh  measures.h  mypapi.h
4-Year/AA/src/: main.cpp  matrix.cpp  matrixgpu.cu  measures.cpp  mypapi.cpp
4-Year/AP/ASP/: Makefile  asp.c  run.sh
4-Year/AP/MD/src/: MD.c  Makefile  Particle.c  Particle.h  main.c  run.sh
4-Year/AP/MatrixMult/: Makefile  matrixV2.cpp  run.sh
4-Year/AP/Poisson/: cache  poisson_cache_friendly.cpp
4-Year/AP/Sort/: Makefile  main.c  run.sh  sort.c  sort.h
4-Year/IPLN/: README.md
4-Year/IPLN/TP1/: README.md  input.txt  nlgrep.py
4-Year/IPLN/TP2/: contapal.py  requirements.txt
4-Year/IPLN/TP2/exemplos/: ex_extend.py  exemplo1.py  users.py
4-Year/IPLN/TP2/exemplos/exemplo_mix/: base.html
4-Year/IPLN/TP2/exemplos/extend/: base.html  child.html
4-Year/IPLN/TP2/templates/: base.html  form.html  index.html
4-Year/IPLN/TP3/: example.txt  realwordseg.py  wordseg.py
4-Year/LEI/: README.md
4-Year/LEI/AppDesktop/src/: MainIpc.js
4-Year/LEI/AppDesktop/src/MainWindow/: Ipc.js  index.html  preload.js  renderer.js
4-Year/LEI/AppDesktop/src/MainWindow/Components/: modal.js
4-Year/LEI/MobileApp/: App.js  package-lock.json  package.json
4-Year/LEI/MobileApp/android/: settings.gradle
4-Year/LEI/MobileApp/android/app/src/debug/: AndroidManifest.xml
4-Year/LEI/MobileApp/android/app/src/main/: AndroidManifest.xml
4-Year/LEI/MobileApp/ios/: Podfile
4-Year/LEI/MobileApp/ios/MobileApp.xcodeproj/: project.pbxproj
4-Year/LEI/MobileApp/mock/: server.js
4-Year/LEI/MobileApp/src/: Sorting.js  index.js  routes.js  utils.js
4-Year/LEI/MobileApp/src/Components/: Card.js  NavBar.js
4-Year/LEI/MobileApp/src/Screens/: Register.js
4-Year/LEI/MobileApp/src/Screens/Home/: AddTodoScreen.js  DetailsScreen.js  ExitScreen.js  Home.js  HomeScreen.js  SyncScreen.js  TodosScreen.js
4-Year/LEI/MobileApp/src/Screens/Login/: Login.js
4-Year/LEI/MobileApp/src/Services/: api.js
4-Year/PCP/TP1/: Makefile  compile.sh  measures.sh
4-Year/PCP/TP1/include/: coo_sparse.h  matrix.h  measures.h  my_papi.h  yale_sparse.h
4-Year/PCP/TP1/src/: coo_sparse.c  main.c  matrix.c  measures.c  my_papi.c  yale_sparse.c
4-Year/PCP/TP2/: Makefile  run.sh
4-Year/PCP/TP2/include/: coo_static.h  crs_stattic_master.h  yale_master.h
4-Year/PCP/TP2/src/: coo_static.cpp  coo_static_main.cpp  crs_dynamic.cpp  crs_stattic.cpp  crs_stattic_master.cpp  matrix.cpp  yale_master.cpp
4-Year/PCP/TP3/: Makefile  compile.sh  run.sh  run_old.sh  run_seq.sh  run_task.sh
4-Year/PCP/TP3/include/: crs.h  matrix.h
4-Year/PCP/TP3/src/: crs.cpp  crs_main.cpp  crs_main_old.cpp  crs_main_seq.cpp  crs_main_task.cpp
4-Year/SDLE/: flowUpdating-2.py  flowUpdating.py  lab0.py  lab1.py  lab2.py  lab3-ini.py  lab3.py  lab4.py  labT.py  test.py
(+2 files in other folders)
